# bridge

./: .gitattributes  .gitignore  AGENTS.md  BRIDGE_TALLY_RESEARCH_AND_CODEX_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES_RUST.txt  agents.md  package.json  pnpm-lock.yaml  review-checklist.md  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  dependency-security.yml
docs/: analysis-summary.md  provenance.md  rectify-guidelines.md  release-process.md  step-by-step-roadmap.md
docs/adr/: 0001-tally-transport-negotiation.md  0002-tally-company-identity.md  (+13 more)
scripts/: check-dependency-inventory.mjs  check-license-metadata.mjs  check-macos-bundle-resources.mjs  check-tally-live-read-boundary.mjs  check-windows-bundle-resources.ps1  generate-rust-licenses.mjs  tally-company-selection.test.mjs
src/: main.tsx  styles.css  tally-company-selection.ts
src-tauri/: Cargo.toml  about.hbs  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/bridge-tally-canonical/: Cargo.toml
src-tauri/crates/bridge-tally-canonical/src/: lib.rs
src-tauri/crates/bridge-tally-canonical/tests/: canonicalization.rs
src-tauri/crates/bridge-tally-compatibility/: Cargo.toml  README.md
src-tauri/crates/bridge-tally-compatibility/src/: bills_native_outstandings_probe_receipt.rs  lib.rs  main.rs
src-tauri/crates/bridge-tally-core/: Cargo.toml
src-tauri/crates/bridge-tally-core/src/: bills_reconciliation.rs  destination.rs  exact_arithmetic.rs  lib.rs  pack_models.rs  reconciliation.rs  report_tie_out.rs  transport_qualification.rs
src-tauri/crates/bridge-tally-incremental/: Cargo.toml
src-tauri/crates/bridge-tally-incremental/src/: lib.rs
src-tauri/crates/bridge-tally-live-read/: Cargo.toml  README.md
src-tauri/crates/bridge-tally-live-read/src/: lib.rs  main.rs  native_outstandings_qualification.rs
src-tauri/crates/bridge-tally-observability/: Cargo.toml
src-tauri/crates/bridge-tally-observability/src/: lib.rs
src-tauri/crates/bridge-tally-protocol/: Cargo.toml  README.md
src-tauri/crates/bridge-tally-protocol/src/: bills_native_outstandings_probe.rs  bills_payments_observation.rs  india_tax_observation.rs  jsonex.rs  jsonex_request.rs  lib.rs  xml_read_profiles.rs
src-tauri/crates/bridge-tally-protocol/tests/: import_evidence.rs  india_tax_observation.rs  jsonex_documented_request.rs  jsonex_official_envelope.rs  ledger_period_balance.rs  simulator_corpus.rs  stream_text_decoder.rs
src-tauri/crates/bridge-tally-protocol/tests/fixtures/jsonex/: README.md  ledger_collection_sanitized.json  voucher_collection_nested_sanitized.json
src-tauri/crates/bridge-tally-qualification/: Cargo.toml  README.md  build.rs
src-tauri/crates/bridge-tally-qualification/src/: lib.rs  main.rs
src-tauri/crates/bridge-tally-read-transport/: Cargo.toml  README.md
src-tauri/crates/bridge-tally-read-transport/src/: lib.rs
src-tauri/crates/bridge-tally-runtime/: Cargo.toml  README.md
src-tauri/crates/bridge-tally-runtime/src/: lib.rs
src-tauri/crates/bridge-tally-transport/: Cargo.toml  README.md
src-tauri/crates/bridge-tally-transport/src/: lib.rs
src-tauri/crates/bridge-tally-transport/tests/: http_transport.rs
src-tauri/crates/bridge-tally-write/: Cargo.toml
src-tauri/crates/bridge-tally-write/src/: lib.rs
src-tauri/crates/bridge-tally-write/tests/: qualification.rs
src-tauri/crates/tally-protocol-simulator/: Cargo.toml  README.md
src-tauri/crates/tally-protocol-simulator/fixtures/: duplicate_export_metadata.xml  duplicate_identity.xml  empty_export.xml  exact_decimals.xml  export_status_0.xml  export_status_1.xml  export_status_invalid.xml  export_status_missing.xml  import_counters.xml  import_duplicate.xml  import_partial.xml  inconsistent_date_filter.xml  malformed.xml  malformed_export_metadata.xml  normal_export.xml  record_count_mismatch.xml  synthetic_json_semantic_reference.json  truncated.xml  voucher_export.xml  wrong_company.xml
src-tauri/crates/tally-protocol-simulator/src/: fixtures.rs  generator.rs  lib.rs  master_generator.rs  server.rs
src-tauri/crates/tally-protocol-simulator/tests/: protocol_simulator.rs
src-tauri/icons/: icon.icns
src-tauri/src/: axal.rs  commands.rs  daemon.rs  documents.rs  dsc.rs  lib.rs  main.rs
src-tauri/src/db/: audit.rs  encrypted.rs  mod.rs  outbox.rs  schema.rs  tally_incremental.rs  tally_mirror.rs  tally_write_store.rs
src-tauri/src/db/migrations/: 0002_tally_mirror.sql  0003_tally_safe_writes.sql  0004_tally_snapshot_state.sql  0005_tally_snapshot_recovery.sql  0006_tally_incremental_foundation.sql  0007_tally_selected_read_evidence.sql  0008_tally_reviewed_setup_consumption.sql  0009_tally_snapshot_window_staging.sql  0010_tally_provenance_unavailable_counts.sql  0011_tally_proof_record_counts_digest.sql  0012_tally_window_terminal_evidence.sql  0013_tally_write_fixture_enrollment.sql  0014_tally_write_fixture_revocation_sequence.sql  0014_tally_write_fixture_revocation_sequence_existing.sql  0015_tally_write_canary_reservation.sql  0016_tally_write_canary_payload_binding.sql  0017_tally_write_canary_preflight_attempt.sql  0018_tally_write_canary_preflight_evidence.sql  0019_tally_write_canary_dispatch_attempt.sql  0020_tally_write_canary_final_verdict.sql  0021_tally_write_canary_preflight_target_binding.sql  mod.rs
src-tauri/src/gst/: mod.rs
src-tauri/src/sync/: conflict.rs  coordinator.rs  engine.rs  incremental.rs  mod.rs  reconciliation.rs  retry.rs  snapshot.rs
src-tauri/src/tally/: canary_dispatch_admission.rs  canary_preflight.rs  canary_preflight_preparation.rs  canary_preflight_read_coordinator.rs  canary_runtime_dispatch_coordinator.rs  capability_packs.rs  connection.rs  connector.rs  incremental.rs  mod.rs  runtime.rs  serial_queue.rs  tdl_engine.rs  validators.rs  write_sandbox.rs  xml_builder.rs  xml_parser.rs
(+26 files in other folders)
