[package]
name = "bridge"
version = "0.2.0"
description = "Bridge is the open-source Tauri implementation of the AXAL Sync desktop workflows."
authors = ["AXAL"]
license = "Apache-2.0"
repository = "https://github.com/lamemustafa/bridge"
publish = false
edition = "2021"
rust-version = "1.96"
default-run = "bridge"

[lib]
name = "bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bridge"
path = "src/main.rs"

[[bin]]
name = "bridge-daemon"
path = "src/daemon.rs"

[[bin]]
name = "dsc_probe"
path = "src/bin/dsc_probe.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cryptoki = "0.12"
pkcs11 = "0.5"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
x509-parser = "0.16"
zeroize = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }
