[package]
name = "bridge-tally-canonical"
version = "0.1.0"
description = "Portable fail-closed canonicalization for Bridge Tally exports"
license = "Apache-2.0"
repository = "https://github.com/lamemustafa/bridge"
publish = false
edition = "2021"
rust-version = "1.96"

[dependencies]
bridge-tally-core = { path = "../bridge-tally-core" }
bridge-tally-protocol = { path = "../bridge-tally-protocol" }
sha2 = "0.11"
