[package]
name = "bridge-tally-compatibility"
version = "0.1.0"
description = "Privacy-safe live Tally compatibility evidence and release-claim gates for Bridge"
license = "Apache-2.0"
repository = "https://github.com/lamemustafa/bridge"
publish = false
edition = "2021"
rust-version = "1.96"

[features]
default = []
bills-native-outstandings-probe-receipt = []

[dependencies]
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
