[package]
name = "bridge-tally-protocol"
version = "0.1.0"
description = "Portable Tally wire decoding, XML protocol, and disabled JSONEX evidence tools for Bridge"
license = "Apache-2.0"
repository = "https://github.com/lamemustafa/bridge"
publish = false
edition = "2021"
rust-version = "1.96"

[features]
default = []
jsonex-parser = ["dep:serde_json"]
jsonex-request-builder = ["dep:serde_json"]
india-tax-observation-parser = []
bills-payments-observation-parser = []
bills-native-outstandings-probe = []

[dependencies]
anyhow = "1"
quick-xml = { version = "0.41", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"], optional = true }
sha2 = "0.11"

[dev-dependencies]
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
tally-protocol-simulator = { path = "../tally-protocol-simulator" }
