[package]
name = "tally-protocol-simulator"
version = "0.1.0"
description = "Deterministic, synthetic Tally protocol simulator for Bridge tests"
license = "Apache-2.0"
repository = "https://github.com/lamemustafa/bridge"
publish = false
edition = "2021"
rust-version = "1.96"

[dependencies]
bridge-tally-core = { path = "../bridge-tally-core" }
hex = "0.4"
quick-xml = "0.41"
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
